# website

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
website/: manage.py
website/app1/: models.py  urls.py  views.py
website/app1/templates/app1/: index.html
website/app2/: models.py  urls.py  views.py
website/app2/templates/app2/: index.html
website/app3/: models.py  urls.py  views.py
website/app3/templates/app3/: index.html
website/website/: urls.py
website/website/settings/: base.py  database_router.py  env.example  production.py
