[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Muzsor", email = "website@gmail.com"},
]
dependencies = ["asgiref==3.4.1", "django==3.2.8", "django-redis==5.0.0", "mssql-django==1.0", "mysqlclient==2.0.3", "pyodbc==4.0.32", "python-dotenv==0.19.1", "pytz==2021.3", "redis==3.5.3", "sqlparse==0.4.2"]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"


[tool]
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true
